[B]1.0.4[/B]
- borítók forrásának lekövetése
[B]1.0.3[/B]
- img_url, quote_plus fix
[B]1.0.2[/B]
- img scrape változás lekövetése
[B]1.0.1[/B]
- os verzió kiszedése
[B]1.0.0[/B]
- Első verzió